--- a/templates/ingi.html
+++ b/templates/ingi.html
@@ -50,7 +50,7 @@
     <main>
       <article class="ingi__container">
         <!-- user Favorite Course place -->
-        <div class="ingi-list__container">
+        <div id="ingizzang">
           <div class="ingi__choice">
             <select name="ingi-gender" id="ingi-gender" class="ingi-box">
               <option selected>성별</option>
@@ -73,14 +73,17 @@
               <option selected>시</option>
               <option>천안시</option>
             </select>
+            <button type="button" id="ingi-search">검색</button>
           </div>
-          <!-- contents ( 10개 ) -->
-          <section>
-            <div id="items">
-              <!-- 아이템들 들어갈 거임 -->
-            </div>
-          </section>
-          <!-- contents -->
+          <div class="ingi-list__container">
+            <!-- contents ( 10개 ) -->
+            <section>
+              <div id="items">
+                <!-- 아이템들 들어갈 거임 -->
+              </div>
+            </section>
+            <!-- contents -->
+          </div>
         </div>
         <!-- user Favorite Course place -->
 
