--- a/templates/ingi.html
+++ b/templates/ingi.html
@@ -66,12 +66,10 @@
               <option>50</option>
             </select>
             <select name="ingi-do" id="ingi-do" class="ingi-box">
-              <option selected>도</option>
-              <option>충청남도</option>
+              <option selected>전체</option>
             </select>
             <select name="ingi-si" id="ingi-si" class="ingi-box">
-              <option selected>시</option>
-              <option>천안시</option>
+              <option selected>전체</option>
             </select>
             <button type="button" id="ingi-search">검색</button>
           </div>
