--- a/templates/ingi.html
+++ b/templates/ingi.html
@@ -53,17 +53,19 @@
         <div id="ingizzang">
           <div class="ingi__choice">
             <select name="ingi-gender" id="ingi-gender" class="ingi-box">
-              <option selected>성별</option>
-              <option>남자</option>
-              <option>여자</option>
+              <option disabled selected>성별</option>
+              <option>전체</option>
+              <option>남성</option>
+              <option>여성</option>
             </select>
             <select name="ingi-age" id="ingi-age" class="ingi-box">
-              <option selected>나이</option>
-              <option>10</option>
-              <option>20</option>
-              <option>30</option>
-              <option>40</option>
-              <option>50</option>
+              <option disabled selected>나이</option>
+              <option>전체</option>
+              <option>10대</option>
+              <option>20대</option>
+              <option>30대</option>
+              <option>40대</option>
+              <option>50대</option>
             </select>
             <select name="ingi-do" id="ingi-do" class="ingi-box">
               <option selected>전체</option>
