--- a/templates/withdrawal.html
+++ b/templates/withdrawal.html
@@ -59,10 +59,10 @@
           <small>탈퇴사유</small>
             <select id="withdrawal_select">
               <option value="">선택</option>
-              <option value="lost opportunity">이용기회 상실</option>
-              <option value="difficulty">이용방법이 어려움</option>
-              <option value="dissatisfaction">서비스 불만족</option>
-              <option value="etc">기타</option>
+              <option value="이용기회 상실">이용기회 상실</option>
+              <option value="이용방법이 어려움">이용방법이 어려움</option>
+              <option value="서비스 불만족">서비스 불만족</option>
+              <option value="기타">기타</option>
             </select>
         </div>
 
