--- a/templates/myInfo.html
+++ b/templates/myInfo.html
@@ -62,10 +62,16 @@
         <!-- thymeleaf -->
 
         <div class="my-info__change">
-          <button type="button" onclick="location.href='./myInfoSetting.html'">
+          <button
+            type="button"
+            onclick="location.href='/myPage/myInfo/webDatasetting'"
+          >
             정보수정
           </button>
-          <button type="button" onclick="location.href='./withdrawal.html'">
+          <button
+            type="button"
+            onclick="location.href='/myCourse/myCourse/webwithdrawal'"
+          >
             회원탈퇴
           </button>
           <!-- <button type="button">돌아가기</button> -->
@@ -73,5 +79,6 @@
       </div>
     </main>
     <!-- content end -->
+    <script src="./js/myInfo"></script>
   </body>
 </html>
