--- a/templates/withdrawal.html
+++ b/templates/withdrawal.html
@@ -1,105 +1,114 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <link rel="stylesheet" href="./css/withdrawal.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>withdrawal</title>
+  </head>
+  <body>
+    <!-- header start -->
+    <header class="withdrawal__header">
+      <div>
+        <a href="./main.html">
+          <img
+            src="../images/logo_white.png"
+            alt="logo"
+            id="jeogi-logo__img"
+            width="180px"
+          />
+        </a>
+      </div>
+      <nav class="my-info-nav__list">
+        <ul>
+          <li>
+            <a href="#"> 찜목록 </a>
+          </li>
+          <li>
+            <a href="./myInfo.html" id="my-page__choice"> 마이페이지 </a>
+          </li>
+          <li>
+            <a href="login.html"> 로그인 </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- header end -->
 
-<head>
-  <link rel="stylesheet" href="./css/withdrawal.css" />
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>withdrawal</title>
-</head>
+    <!-- content start -->
+    <main>
+      <!--회원탈퇴 container-->
+      <div class="withdrawal-container">
+        <!-- 회원 탈퇴-->
+        <div class="withdrawal">
+          <form action="./withdrawal" method="post" id="withdrawal-form">
+            <h2>회원탈퇴</h2>
 
-<body>
-      <!-- header start -->
-      <header class="withdrawal__header">
-        <div>
-          <a href="./main.html">
-            <img
-              src="../images/logo_white.png"
-              alt="logo"
-              id="jeogi-logo__img"
-              width="180px"
-            />
-          </a>
+            <div class="withdrawal-warning">
+              <p>
+                회원님의 계정이 삭제됩니다. <br />탈퇴시 개인정보 및 이용정보가
+                삭제되며 복구할 수 없습니다. <br />본인의 비밀번호를 입력한 후
+                하단의 유의사항 동의에 체크하세요.
+              </p>
+            </div>
+
+            <div>
+              <small>탈퇴사유</small>
+              <select id="withdrawal_select">
+                <option value="">선택</option>
+                <option value="lost opportunity">이용기회 상실</option>
+                <option value="difficulty">이용방법이 어려움</option>
+                <option value="dissatisfaction">서비스 불만족</option>
+                <option value="etc">기타</option>
+              </select>
+            </div>
+
+            <small>본인인증을 위해 비밀번호를 입력해주세요.</small>
+            <div class="withdrawal-password">
+              <input
+                type="password"
+                id="wd_pw"
+                name="wd_pw"
+                placeholder="PASSWORD"
+              />
+            </div>
+
+            <label>
+              <input
+                type="checkbox"
+                name="checkbox"
+                id="checkbox"
+                onclick="checkDisable(this.form)"
+              />
+              <span> 유의사항 동의</span>
+            </label>
+
+            <div class="withdrawal-submit">
+              <button type="button" name="wd_btn" id="wd_btn" disabled="true">
+                회원탈퇴
+              </button>
+              <!-- <button type="button" name="backBtn" id="backBtn" onclick="location.href='#'"> 돌아가기</button> -->
+            </div>
+            <div class="withdrawal-back">
+              <a href="./myInfo.html">돌아가기</a>
+            </div>
+          </form>
         </div>
-        <nav class="my-info-nav__list">
-          <ul>
-            <li>
-              <a href="#"> 찜목록 </a>
-            </li>
-            <li>
-              <a href="./myInfo.html" id="my-page__choice"> 마이페이지 </a>
-            </li>
-            <li>
-              <a href="login.html"> 로그인 </a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <!-- header end -->
-
-  <!-- content start -->
-  <main>
-  <!--회원탈퇴 container-->
-  <div class="withdrawal-container">
-    <!-- 회원 탈퇴-->
-    <div class="withdrawal">
-      <form action="./withdrawal" method="post" id="withdrawal-form">
-
-        <h2>회원탈퇴</h2>
-
-        <div class="withdrawal-warning">
-          <p>회원님의 계정이 삭제됩니다.
-            <br>탈퇴시 개인정보 및 이용정보가 삭제되며 복구할 수 없습니다.
-            <br>본인의 비밀번호를 입력한 후 하단의 유의사항 동의에 체크하세요.
-          </p>
-        </div>
-
-        <div>
-          <small>탈퇴사유</small>
-            <select id="withdrawal_select">
-              <option value="">선택</option>
-              <option value="lost opportunity">이용기회 상실</option>
-              <option value="difficulty">이용방법이 어려움</option>
-              <option value="dissatisfaction">서비스 불만족</option>
-              <option value="etc">기타</option>
-            </select>
-        </div>
-
-        <small>본인인증을 위해 비밀번호를 입력해주세요.</small>
-        <div class="withdrawal-password">
-          <input type="password" id="wd_pw" name="wd_pw" placeholder="PASSWORD" />
-        </div>
-
-        <label>
-          <input type="checkbox" name="checkbox" id="checkbox" onclick="checkDisable(this.form)" />
-          <span> 유의사항 동의</span>
-        </label>
-        
-        <div class="withdrawal-submit">
-          <button type="button" name="wd_btn" id="wd_btn" disabled="true">회원탈퇴</button>
-          <!-- <button type="button" name="backBtn" id="backBtn" onclick="location.href='#'"> 돌아가기</button> -->
-        </div>
-        <div class="withdrawal-back">
-          <a href="./myInfo.html">돌아가기</a>
-        </div>
-        
-      </form>
-    </div>
-    <!--withdrawal-->
-  </div>
-  <!--withdrawal container-->
-  <script src="./js/withdrawal.js"></script>
-  <script>
-    function checkDisable(form) {
-      if (form.checkbox.checked == true) {
-        form.wd_btn.disabled = false;
-      } else {
-        form.wd_btn.disabled = true;
-      }
-    }
-  </script>
-</main>
-<!-- content end -->
-</body>
+        <!--withdrawal-->
+      </div>
+      <!--withdrawal container-->
+      <script src="./js/withdrawal.js"></script>
+      <script>
+        function checkDisable(form) {
+          if (form.checkbox.checked == true) {
+            form.wd_btn.disabled = false;
+          } else {
+            form.wd_btn.disabled = true;
+          }
+        }
+      </script>
+    </main>
+    <!-- content end -->
+  </body>
 </html>
