--- a/templates/findPw.html
+++ b/templates/findPw.html
@@ -31,7 +31,7 @@
           </select>
         </div>
         <div id="findPw__button">
-          <button type="button">아이디 찾기</button>
+          <button type="button">비밀번호 찾기</button>
         </div>
       </div>
     </div>
