--- a/templates/withdrawal.html
+++ b/templates/withdrawal.html
@@ -11,7 +11,7 @@
     <!-- header start -->
     <header class="withdrawal__header">
       <div>
-        <a href="./main.html">
+        <a href="/mainPage">
           <img
             src="../images/logo_white.png"
             alt="logo"
@@ -23,7 +23,13 @@
       <nav class="my-info-nav__list">
         <ul>
           <li>
-            <a href="#"> 찜목록 </a>
+            <a href="/popularCourse">인기코스</a>
+          </li>
+          <li>
+            <a href="./findCourse.html">코스찾기</a>
+          </li>
+          <li>
+            <a href="/myCourse/myCourseSite">내코스</a>
           </li>
           <li>
             <a href="./myInfo.html" id="my-page__choice"> 마이페이지 </a>
