--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
     <div class="login-container">
       <!-- login-->
       <div class="login">
-        <a href="./main.html">
+        <a href="/mainPage">
         <img
           src="../images/logo.png"
           alt="jeogi"
@@ -28,14 +28,14 @@
       </div>
       <div class="loginfind">
         <ul>
-          <li><a href="./findId.html">아이디찾기</a></li>
-          <li><a href="./findPw.html">비밀번호찾기</a></li>
+          <li><a href="/login/findMyId">아이디찾기</a></li>
+          <li><a href="/login/findMyPw">비밀번호찾기</a></li>
         </ul>
       </div>
         <div class="login-submit">
           <button type="button" id="loginbtn">로그인</button>
           <!-- <button type="button"id="loginbtn"onclick="alert('로그인 완료')" >로그인</button> -->
-          <button type="button"onclick="location.href='./signup.html'"> 회원가입</button>
+          <button type="button"onclick="location.href='/login/signUp'"> 회원가입</button>
         
       </form>
       </div>
