--- a/templates/myFavoriteCourse.html
+++ b/templates/myFavoriteCourse.html
@@ -29,24 +29,24 @@
       <nav class="my-fav__nav__list">
         <ul>
           <li>
-            <a href="./ingi.html">인기코스</a>
+            <a href="/popularCourse">인기코스</a>
           </li>
           <li>
-            <a href="./findCourse.html">코스찾기</a>
+            <a href="/findCourse/webCourse">코스찾기</a>
           </li>
           <li>
             <a
-              href="./myFavoriteCourse.html"
+              href="/myCourse/myCourseSite"
               style="border-bottom: 2px solid white"
             >
               내코스
             </a>
           </li>
           <li>
-            <a href="./myInfo.html">마이페이지</a>
+            <a href="/myPage/myInfo/webData">마이페이지</a>
           </li>
           <li>
-            <a href="./login.html">로그인</a>
+            <a href="/login/signIn">로그인</a>
           </li>
         </ul>
       </nav>
