--- a/templates/myInfoSetting.html
+++ b/templates/myInfoSetting.html
@@ -22,18 +22,18 @@
       </div>
       <nav class="my-info-nav__list">
         <ul>
-          <li><a href="./ingi.html">인기코스</a></li>
+          <li><a href="/popularCourse">인기코스</a></li>
           <li>
-            <a href="./findCourse.html">코스찾기</a>
+            <a href="/findCourse/webCourse">코스찾기</a>
           </li>
           <li>
-            <a href="#">내코스</a>
+            <a href="/myCourse/myCourseSite">내코스</a>
           </li>
           <li>
-            <a href="./myInfo.html" id="my-page__choice">마이페이지</a>
+            <a href="/myPage/myInfo/webData" id="my-page__choice">마이페이지</a>
           </li>
           <li>
-            <a href="login.html">로그인</a>
+            <a href="/login/signIn">로그인</a>
           </li>
         </ul>
       </nav>
@@ -95,7 +95,7 @@
 
         <div class="my-info-setting__change">
           <button type="button" id="save_data">저장</button>
-          <button type="button" onclick="location.href='./myInfo.html'">
+          <button type="button" onclick="location.href='/myPage/myInfo/webData'">
             돌아가기
           </button>
         </div>
