--- a/templates/signup.html
+++ b/templates/signup.html
@@ -94,7 +94,7 @@
 
           <div class="signup-submit">
             <button type="button" id="signupBtn">회원가입</button>
-            <button type="button" onclick="location.href='./login.html'">
+            <button type="button" onclick="location.href='/login/signIn'">
               가입취소
             </button>
           </div>
