--- a/templates/withdrawal.html
+++ b/templates/withdrawal.html
@@ -26,16 +26,16 @@
             <a href="/popularCourse">인기코스</a>
           </li>
           <li>
-            <a href="./findCourse.html">코스찾기</a>
+            <a href="/findCourse/webCourse">코스찾기</a>
           </li>
           <li>
             <a href="/myCourse/myCourseSite">내코스</a>
           </li>
           <li>
-            <a href="./myInfo.html" id="my-page__choice"> 마이페이지 </a>
+            <a href="./myPage/myInfo/webData" id="my-page__choice"> 마이페이지 </a>
           </li>
           <li>
-            <a href="login.html"> 로그인 </a>
+            <a href="/login/signIn"> 로그인 </a>
           </li>
         </ul>
       </nav>
@@ -97,7 +97,7 @@
               <!-- <button type="button" name="backBtn" id="backBtn" onclick="location.href='#'"> 돌아가기</button> -->
             </div>
             <div class="withdrawal-back">
-              <a href="./myInfo.html">돌아가기</a>
+              <a href="/myPage/myInfo/webData">돌아가기</a>
             </div>
           </form>
         </div>
