--- a/templates/main.html
+++ b/templates/main.html
@@ -22,18 +22,18 @@
       </div>
       <nav class="main-nav__list">
         <ul>
-          <li><a href="./ingi.html">인기코스</a></li>
+          <li><a href="/popularCourse">인기코스</a></li>
           <li>
-            <a href="./findCourse.html">코스찾기</a>
+            <a href="/findCourse/webCourse">코스찾기</a>
           </li>
           <li>
-            <a href="./myFavoriteCourse.html">내코스</a>
+            <a href="/myCourse/myCourseSite">내코스</a>
           </li>
           <li>
-            <a href="./myInfo.html">마이페이지</a>
+            <a href="/myPage/myInfo/webData">마이페이지</a>
           </li>
           <li>
-            <a href="login.html">로그인</a>
+            <a href="/login/signIn">로그인</a>
           </li>
         </ul>
       </nav>
@@ -58,18 +58,18 @@
         <div class="test1">
           <div
             class="test1_1"
-            onclick="location.href='ingi.html'"
+            onclick="location.href='/popularCourse'"
             style="cursor: pointer"
           >
             <span> 인기코스 </span>
           </div>
-          <div class="test1_2" onclick="location.href='findCourse.html'">
+          <div class="test1_2" onclick="location.href='/findCourse/webCourse'">
             <span>코스찾기</span>
           </div>
         </div>
 
         <div class="test2">
-          <div class="test2_1" onclick="location.href='myFavoriteCourse.html'">
+          <div class="test2_1" onclick="location.href='/myCourse/myCourseSite'">
             <span>내코스</span>
           </div>
           <div class="test2_2">
