--- a/templates/ingi.html
+++ b/templates/ingi.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <header class="ingi__header">
       <div>
-        <a href="./main.html">
+        <a href="/mainPage">
           <img
             src="../images/logo_white.png"
             alt="logo"
@@ -27,19 +27,19 @@
       <nav class="ingi__nav__list">
         <ul>
           <li>
-            <a href="./ingi.html">인기코스</a>
+            <a href="/popularCourse">인기코스</a>
           </li>
           <li>
-            <a href="./findCourse.html">코스찾기</a>
+            <a href="/findCourse/webCourse">코스찾기</a>
           </li>
           <li>
-            <a href="./myFavoriteCourse.html">내코스</a>
+            <a href="/myCourse/myCourseSite">내코스</a>
           </li>
           <li>
-            <a href="./myInfo.html">마이페이지</a>
+            <a href="/myPage/myInfo/webData">마이페이지</a>
           </li>
           <li>
-            <a href="./login.html">로그인</a>
+            <a href="/login/signIn">로그인</a>
           </li>
         </ul>
       </nav>
