--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
     <!-- header start -->
     <header class="main-header">
       <div>
-        <a href="./main.html">
+        <a href="/mainPage">
           <img
             src="../images/logo_white.png"
             alt="logo"
